[package]
name = "lambda-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambda"
path = "src/lambda.rs"

[[bin]]
name = "setup_collection"
path = "src/setup_collection.rs"

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
lambda_http = { version = "0.8", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8"
qdrant-client = "1.3.0"
regex = "1.6.0"
reqwest =  { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
log = "0.4.17"
env_logger = "0.9.1"

