[tool.poetry]
name = "langchain-lcel-rag"
version = "0.1.0"
description = ""
authors = ["Nirant Kasliwal <nirant.bits@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
langchain = "^0.1.15"
langchain-community = "^0.0.32"
langchainhub = "^0.1.15"
langchain-openai = "^0.1.2"
qdrant-client = "^1.8.2"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
